# lms-backend

./: .gitignore  Containerfile  GAP_ANALYSIS.md  README.md  create_backend_structure.sh  pyproject.toml  test_course_completion.py
apps/ai_engine/: admin.py  apps.py  models.py  permissions.py  recommenders.py  serializers.py  services.py  tasks.py  urls.py  views.py  viewsets.py
apps/analytics/: admin.py  admin_api_urls.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py  viewsets.py  viewsets_backup.py  viewsets_comprehensive.py  viewsets_new.py
apps/assessments/: admin.py  apps.py  instructor_api_urls.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py  viewsets.py
apps/common/: exceptions.py  models.py  pagination.py  permissions.py  serializers.py  utils.py
apps/core/: admin.py  admin_api_urls.py  context_processors.py  instructor_api_urls.py  learner_api_urls.py  middleware.py  models.py  serializers.py  services.py  settings_api_urls.py  urls.py  views.py  viewsets.py
apps/courses/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
apps/discussions/: admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
apps/enrollments/: admin.py  apps.py  certificate_service.py  enrollment_status_view.py  models.py  permissions.py  self_enrollment_view.py  serializers.py  services.py  signals.py  urls.py  views.py  viewsets.py
apps/files/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  (+1 more)
lms_backend/: urls.py
(+116 files in other folders)
